--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ book:
 
 bibliography:
     - references.bib
-# reference-section-title: References
+reference-section-title: References
 # citeproc: true
 
 
@@ -48,7 +48,7 @@ format:
 
 filters:
    - include-code-files
-#   - section-bibliographies
+   - section-bibliographies
 
 knitr:
   opts_chunk:
