--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ book:
     - index.qmd
     - 01-data-resources.qmd
     - 02-austrian-data.qmd
+    - 09-well-being.qmd
 
   appendices:
     - 80-countries-in-regions.qmd
